# sigbot

./: .gitignore  .gitmodules  Dockerfile  INSTALL.md  LICENSE  README.md  REFERENCES.md  SETUP.MD  pyproject.toml
app/: main.py  models.py
app/routers/: shorten.py
ca/: ca.md
ca/root/: here-be-dragons.md
docx/: qrdoc.docx
sigbot/: cli.py
templates/: trust.html  verified.html  welcome.html
trustlists/: authorized.jsonl  index.html  trustmembers.jsonl
utils/: get_tls_public_key.py  getpdfsignatures.py  helpers.py  loadcert.py  pdf-sign-cms.py  pdf-verify.py  redis-test.py  signpdf.py  testpdf.py  testverify.py
