[tool.poetry]
name = "sigbot"
version = "0.1.0"
description = "Sign and Verify Bot"
authors = ["trbouma <trbouma@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
