[tool.poetry]
name = "sigbot"
version = "0.1.0"
description = "Sign and Verify Bot"
authors = ["trbouma <trbouma@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.scripts]
sigbot = "sigbot.cli:cli"



[tool.poetry.dependencies]
python = ">=3.10.4,<4.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
cryptography = "^43.0.3"
pikepdf = "^9.4.2"
pyhanko = "^0.25.3"
click = "^8.1.7"
pypdf = "^5.1.0"
python-dateutil = "^2.9.0.post0"
python-multipart = "^0.0.18"
httpx = "^0.28.0"
jinja2 = "^3.1.4"
jsonlines = "^4.0.0"
endesive = "^2.17.3"
redis = "^5.2.1"
pydantic-settings = "^2.7.0"
pypdf2 = "^3.0.1"
pillow = "^11.0.0"
qrcode = "^8.0"
reportlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
